--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,42 +138,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: CI script
-        env: ${{ matrix.configuration.env_vars }}
-        uses: ./.github/actions/run-in-docker-action
-        with:
-          dockerfile: ./ci/linux-debian.Dockerfile
-          tag: linux-debian-image
-
-      - run: cat tests.log || true
-        if: ${{ always() }}
-      - run: cat noverify_tests.log || true
-        if: ${{ always() }}
-      - run: cat exhaustive_tests.log || true
-        if: ${{ always() }}
-      - run: cat ctime_tests.log || true
-        if: ${{ always() }}
-      - run: cat bench.log || true
-        if: ${{ always() }}
-      - run: cat config.log || true
-        if: ${{ always() }}
-      - run: cat test_env.log || true
-        if: ${{ always() }}
-      - name: CI env
-        run: env
-        if: ${{ always() }}
-
-  i686_debian:
-    name: "i686: Linux (Debian stable)"
-    runs-on: ubuntu-latest
-    needs: docker_cache
-
-    strategy:
-      fail-fast: false
-      matrix:
-        cc:
-          - 'i686-linux-gnu-gcc'
-          - 'clang --target=i686-pc-linux-gnu -isystem /usr/i686-linux-gnu/include'
+      - name: Clang version
+        run: |
+          sudo xcode-select --switch /Applications/Xcode_15.0.app
+          clang --version
 
       - name: Install Homebrew packages
         env:
