--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,8 +152,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: CI script
-        uses: ./.github/actions/run-in-docker-action
+      - name: Restore Ccache cache
+        id: ccache-cache
+        uses: actions/cache/restore@v4
         with:
           dockerfile: ./ci/linux-debian.Dockerfile
           tag: linux-debian-image
@@ -232,24 +233,9 @@ jobs:
           - env_vars: {}
           - env_vars: { EXPERIMENTAL: 'yes', ASM: 'arm32' }
 
-    env:
-      WRAPPER_CMD: 'qemu-arm'
-      SECP256K1_TEST_ITERS: 16
-      HOST: 'arm-linux-gnueabihf'
-      WITH_VALGRIND: 'no'
-      ECDH: 'yes'
-      RECOVERY: 'yes'
-      SCHNORRSIG: 'yes'
-      ELLSWIFT: 'yes'
-      CTIMETESTS: 'no'
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: CI script
-        env: ${{ matrix.configuration.env_vars }}
-        uses: ./.github/actions/run-in-docker-action
+      - name: Save Ccache cache
+        uses: actions/cache/save@v4
+        if: github.event_name != 'pull_request' && steps.ccache-cache.outputs.cache-hit != 'true'
         with:
           dockerfile: ./ci/linux-debian.Dockerfile
           tag: linux-debian-image
@@ -395,7 +381,7 @@ jobs:
 
       - name: Restore static Qt cache
         id: static-qt-cache
-        uses: actions/cache/restore@v3
+        uses: actions/cache/restore@v4
         with:
           dockerfile: ./ci/linux-debian.Dockerfile
           tag: linux-debian-image
@@ -448,9 +434,33 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: CI script
-        env: ${{ matrix.configuration.env_vars }}
-        uses: ./.github/actions/run-in-docker-action
+      - name: Build static Qt. Create build directory
+        if: steps.static-qt-cache.outputs.cache-hit != 'true'
+        run: |
+          Rename-Item -Path "C:\$env:CI_QT_DIR" -NewName "C:\qt-src"
+          New-Item -ItemType Directory -Path "C:\qt-src\build"
+
+      - name: Build static Qt. Configure
+        if: steps.static-qt-cache.outputs.cache-hit != 'true'
+        working-directory: C:\qt-src\build
+        shell: cmd
+        run: ..\configure %CI_QT_CONF% -prefix C:\Qt_static
+
+      - name: Build static Qt. Build
+        if: steps.static-qt-cache.outputs.cache-hit != 'true'
+        working-directory: C:\qt-src\build
+        shell: cmd
+        run: jom
+
+      - name: Build static Qt. Install
+        if: steps.static-qt-cache.outputs.cache-hit != 'true'
+        working-directory: C:\qt-src\build
+        shell: cmd
+        run: jom install
+
+      - name: Save static Qt cache
+        if: steps.static-qt-cache.outputs.cache-hit != 'true'
+        uses: actions/cache/save@v4
         with:
           dockerfile: ./ci/linux-debian.Dockerfile
           tag: linux-debian-image
@@ -489,24 +499,9 @@ jobs:
               ECMULTWINDOW: 2
               CFLAGS: '-fsanitize=memory -fsanitize-recover=memory -g -O3'
 
-    env:
-      ECDH: 'yes'
-      RECOVERY: 'yes'
-      SCHNORRSIG: 'yes'
-      ELLSWIFT: 'yes'
-      CTIMETESTS: 'yes'
-      CC: 'clang'
-      SECP256K1_TEST_ITERS: 32
-      ASM: 'no'
-      WITH_VALGRIND: 'no'
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: CI script
-        env: ${{ matrix.configuration.env_vars }}
-        uses: ./.github/actions/run-in-docker-action
+      - name: Ccache installation cache
+        id: ccache-installation-cache
+        uses: actions/cache@v4
         with:
           dockerfile: ./ci/linux-debian.Dockerfile
           tag: linux-debian-image
@@ -534,33 +529,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: docker_cache
 
-    env:
-      WRAPPER_CMD: 'wine'
-      WITH_VALGRIND: 'no'
-      ECDH: 'yes'
-      RECOVERY: 'yes'
-      SCHNORRSIG: 'yes'
-      ELLSWIFT: 'yes'
-      CTIMETESTS: 'no'
-
-    strategy:
-      fail-fast: false
-      matrix:
-        configuration:
-          - job_name: 'x86_64 (mingw32-w64): Windows (Debian stable, Wine)'
-            env_vars:
-              HOST: 'x86_64-w64-mingw32'
-          - job_name: 'i686 (mingw32-w64): Windows (Debian stable, Wine)'
-            env_vars:
-              HOST: 'i686-w64-mingw32'
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: CI script
-        env: ${{ matrix.configuration.env_vars }}
-        uses: ./.github/actions/run-in-docker-action
+      - name: Restore Ccache cache
+        id: ccache-cache
+        uses: actions/cache/restore@v4
         with:
           dockerfile: ./ci/linux-debian.Dockerfile
           tag: linux-debian-image
@@ -622,13 +593,13 @@ jobs:
           Get-Content -Path "$env:GITHUB_WORKSPACE\vcpkg_commit"
 
       - name: vcpkg tools cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: C:/vcpkg/downloads/tools
           key: ${{ github.job }}-vcpkg-tools
 
       - name: vcpkg binary cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/AppData/Local/vcpkg/archives
           key: ${{ github.job }}-vcpkg-binary-${{ hashFiles('vcpkg_commit', 'msbuild_version', 'toolset_version', 'build_msvc/vcpkg.json') }}
@@ -730,12 +701,9 @@ jobs:
       SCHNORRSIG: 'yes'
       ELLSWIFT: 'yes'
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: CI script
-        uses: ./.github/actions/run-in-docker-action
+      - name: Save Ccache cache
+        uses: actions/cache/save@v4
+        if: github.event_name != 'pull_request' && steps.ccache-cache.outputs.cache-hit != 'true'
         with:
           dockerfile: ./ci/linux-debian.Dockerfile
           tag: linux-debian-image
