--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -85,8 +85,11 @@ endif
 if ENABLE_WALLET
 bench_bench_BGL_SOURCES += bench/coin_selection.cpp
 bench_bench_BGL_SOURCES += bench/wallet_balance.cpp
+bench_bench_BGL_SOURCES += bench/wallet_create.cpp
 bench_bench_BGL_SOURCES += bench/wallet_loading.cpp
 bench_bench_BGL_SOURCES += bench/wallet_create_tx.cpp
+bench_bench_BGL_SOURCES += bench/wallet_ismine.cpp
+
 bench_bench_BGL_LDADD += $(BDB_LIBS) $(SQLITE_LIBS)
 endif
 
