build: remove confusing and inconsistent disable-asm option
1. It didn't actually disable asm usage in our code. Regardless of the setting,
   asm is used in random.cpp and support/cleanse.cpp.
2. The value wasn't forwarded to libsecp as a user might have reasonably
   expected.
3. We now have the DISABLE_OPTIMIZED_SHA256 define which is what disable-asm
   actually did in practice.

If there is any desire, we can hook DISABLE_OPTIMIZED_SHA256 up to a new
configure option that actually does what it says.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -48,11 +48,9 @@ LIBBGL_WALLET=libBGL_wallet.a
 LIBBGL_WALLET_TOOL=libBGL_wallet_tool.a
 endif
 
-LIBBGL_CRYPTO = $(LIBGL_CRYPTO_BASE)
-if USE_ASM
+LIBBGL_CRYPTO = $(LIBBGL_CRYPTO_BASE)
 LIBBGL_CRYPTO_SSE4 = crypto/libBGL_crypto_sse4.la
 LIBBGL_CRYPTO += $(LIBBGL_CRYPTO_SSE4)
-endif
 if ENABLE_SSE41
 LIBBGL_CRYPTO_SSE41 = crypto/libBGL_crypto_sse41.la
 LIBBGL_CRYPTO += $(LIBBGL_CRYPTO_SSE41)
