--- a/src/Makefile.qt_locale.include
+++ b/src/Makefile.qt_locale.include
@@ -1,6 +1,7 @@
 QT_TS = \
   qt/locale/BGL_af.ts \
   qt/locale/BGL_am.ts \
+  qt/locale/BGL_ar.ts \
   qt/locale/BGL_az.ts \
   qt/locale/BGL_az@latin.ts \
   qt/locale/BGL_be.ts \
@@ -86,7 +87,6 @@ QT_TS = \
   qt/locale/BGL_pt_BR.ts \
   qt/locale/BGL_ro.ts \
   qt/locale/BGL_ru.ts \
-  qt/locale/BGL_ru_RU.ts \
   qt/locale/BGL_sc.ts \
   qt/locale/BGL_sd.ts \
   qt/locale/BGL_si.ts \
@@ -103,7 +103,6 @@ QT_TS = \
   qt/locale/BGL_szl.ts \
   qt/locale/BGL_ta.ts \
   qt/locale/BGL_te.ts \
-  qt/locale/BGL_th.ts \
   qt/locale/BGL_tk.ts \
   qt/locale/BGL_tl.ts \
   qt/locale/BGL_tr.ts \
